--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <h2 class="text-center pt-5">calcola il prezzo del tuo biglietto</h2>
+    <div class="container rounded">
       <div class="container text-center">
         <div class="row">
           <div class="col">
@@ -28,15 +29,15 @@
             </div>
           </div>
           <div class="col">
-            <div class="form-floating mb-3">
+            <form class="form-floating">
               <input
                 type="email"
                 class="form-control"
-                id="floatingInput"
+                id="floatingInputValue"
                 placeholder="name@example.com"
               />
-              <label for="floatingInput">Km da percorrere</label>
-            </div>
+              <label for="floatingInputValue">Km da percorrere</label>
+            </form>
           </div>
           <div class="col">
             <div class="form-floating">
@@ -48,12 +49,52 @@
                 <option selected>Seleziona la tua fascia d'età</option>
                 <option value="1">Minorenne</option>
                 <option value="2">Maggiorenne</option>
+                <option value="3">Over 65</option>
               </select>
               <label for="floatingSelect">Fascia d'età</label>
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col d-flex justify-content-end">
+            <button type="button" class="btn btn-danger" id="buttonSubmit">
+              Genera
+            </button>
+          </div>
+          <div class="col d-flex">
+            <button type="button" class="btn btn-danger" id="buttonReset">
+              Annulla
+            </button>
+          </div>
+        </div>
       </div>
+    </div>
+    <h2 class="text-center">il tuo biglietto</h2>
+    <div class="container">
+      <form>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <h4>nome passeggero</h4>
+            <h5 id="name">name-placeholder</h5>
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <h5>offerta</h5>
+            <p id="offer">offer-placeholder</p>
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <h5>carrozza</h5>
+            <p id="coach">coach-placeholder</p>
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <h5>codice CP</h5>
+            <p id="code">code-placeholder</p>
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <h5>costo biglietto</h5>
+            <p id="cost">cost-placeholder</p>
+          </div>
+        </div>
+      </form>
     </div>
     <script src="main.js"></script>
   </body>
