--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="col">
             <form class="form-floating">
               <input
-                type="email"
+                type="number"
                 class="form-control"
                 id="floatingInputValue"
                 placeholder="name@example.com"
